[gd_scene load_steps=16 format=2]

[ext_resource path="res://PlayersStart.gd" type="Script" id=1]
[ext_resource path="res://gfx/bgs/paper_01.jpg" type="Texture" id=2]
[ext_resource path="res://gfx/sprites/unfold_01.png" type="Texture" id=3]
[ext_resource path="res://gfx/sprites/unfold_02.png" type="Texture" id=4]
[ext_resource path="res://gfx/sprites/unfold_03.png" type="Texture" id=5]
[ext_resource path="res://gfx/sprites/unfold_04.png" type="Texture" id=6]
[ext_resource path="res://gfx/sprites/unfold_05.png" type="Texture" id=7]
[ext_resource path="res://gfx/sprites/unfold_06b.png" type="Texture" id=8]
[ext_resource path="res://fonts/Chewy-Regular.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://sfx/325221__psychopancake__crushing-paper-slow.wav" type="AudioStream" id=10]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": false,
"name": "unfold",
"speed": 18.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": false,
"name": "unfold",
"speed": 18.0
} ]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": false,
"name": "unfold",
"speed": 18.0
} ]

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": false,
"name": "unfold",
"speed": 18.0
} ]

[sub_resource type="DynamicFont" id=2]
size = 120
outline_size = 6
outline_color = Color( 0.243137, 0.211765, 0.172549, 1 )
use_filter = true
font_data = ExtResource( 9 )

[node name="PlayersStart" type="Node"]
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )

[node name="Players" type="Node" parent="."]

[node name="Player1" type="TouchScreenButton" parent="Players"]
modulate = Color( 0.635294, 0.192157, 1, 0 )
normal = ExtResource( 3 )

[node name="Player2" type="TouchScreenButton" parent="Players"]
modulate = Color( 0.635294, 0.192157, 1, 0 )
normal = ExtResource( 3 )

[node name="Player3" type="TouchScreenButton" parent="Players"]
modulate = Color( 0.635294, 0.192157, 1, 0 )
normal = ExtResource( 3 )

[node name="Player4" type="TouchScreenButton" parent="Players"]
modulate = Color( 0.635294, 0.192157, 1, 0 )
position = Vector2( 335.269, 223.512 )
normal = ExtResource( 3 )

[node name="Seconds" type="Timer" parent="."]

[node name="CountDown" type="Timer" parent="."]

[node name="ShakePlayer" type="Tween" parent="."]

[node name="PlayerAnimations" type="Node" parent="."]

[node name="Player1Animation2" type="AnimatedSprite" parent="PlayerAnimations"]
modulate = Color( 0.364706, 0.784314, 0.27451, 1 )
position = Vector2( 1616.5, 271.982 )
frames = SubResource( 3 )
animation = "unfold"
flip_v = true

[node name="Player1Animation3" type="AnimatedSprite" parent="PlayerAnimations"]
modulate = Color( 0.756863, 0.368627, 0.898039, 1 )
position = Vector2( 541.115, 802.824 )
frames = SubResource( 4 )
animation = "unfold"

[node name="Player1Animation4" type="AnimatedSprite" parent="PlayerAnimations"]
modulate = Color( 0.301961, 0.733333, 0.968627, 1 )
position = Vector2( 1626.77, 809.673 )
frames = SubResource( 5 )
animation = "unfold"

[node name="Player1Animation" type="AnimatedSprite" parent="PlayerAnimations"]
modulate = Color( 0.827451, 0.290196, 0.290196, 1 )
position = Vector2( 544.54, 271.982 )
frames = SubResource( 6 )
animation = "unfold"
flip_v = true

[node name="DebugTimer" type="Label" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -52.0

[node name="TimerUI" type="Control" parent="."]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TimerTween" type="Tween" parent="TimerUI"]

[node name="TimerText" type="Label" parent="TimerUI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -53.0
margin_top = -77.5
margin_right = 53.0
margin_bottom = 77.5
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 40.6051, 77.5 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.572549, 0.52549, 0.470588, 1 )
text = "10"
align = 1
valign = 1

[node name="PlayerSounds" type="Node" parent="."]

[node name="Player1Sound" type="AudioStreamPlayer" parent="PlayerSounds"]
stream = ExtResource( 10 )
[connection signal="timeout" from="Seconds" to="." method="_on_Seconds_timeout"]
